--- a/app/views/partials/userButtonsCard.hbs
+++ b/app/views/partials/userButtonsCard.hbs
@@ -1,8 +1,9 @@
 <div id="userButtonsCard" class="ui card">
   <div class="content">
     <div class="ui basic fluid center aligned container">
-      <button id="showSelectItemsToDeleteButton" class="ui inverted brown icon button">
+      <button id="showSelectItemsToDeleteButton" class="ui brown basic icon button">
         <i class="configure icon"></i>
+        Bulk Remove
       </button>
     </div>
   </div>
