--- a/app/views/partials/userCard.hbs
+++ b/app/views/partials/userCard.hbs
@@ -1,37 +1,35 @@
 <div class="ui card">
+  {{#if canDelete}}
+    <div class="extra content deleteSelector" style="display:none">
+      <div class="right floated">
+        <div class="field">
+          <div class="ui toggle checkbox">
+            <input id="{{_id}}" class="deleteCheckbox" type="checkbox" name="test">
+            <label>Delete</label>
+          </div>
+        </div>
+      </div>
+    </div>
+  {{/if}}
   <a class="image" href="/userTimeline/{{_id}}">
     <img src="{{profilePicture}}">
   </a>
   <div class="content">
     <div class="header">{{firstName}} {{lastName}}</div>
-    <!--<div class="meta">-->
-    <!--<a>Friends</a>-->
-    <!--</div>-->
-    <!--<div class="description">-->
-    <!--Matthew is an interior designer living in New York.-->
-    <!--</div>-->
     <div class="description">
       joined {{joinedString}}
     </div>
   </div>
-  {{#if deletable}}
-    <div class="extra center aligned content">
-      <form class="ui form" action="/removeUser" method="post">
-        <input type="hidden" name="viewedUserID" value="{{_id}}">
-        <button class="ui red basic submit button">
-          <i class="trash icon"></i>
-          Remove User</button>
-      </form>
+  {{#if canDelete}}
+    <div class="extra content">
+      <div class="right floated trash icon">
+        <form class="ui form" action="/users/removeUser" method="post">
+          <input type="hidden" name="viewedUserID" value="{{_id}}">
+          <button class="ui basic brown compact icon submit button">
+            <i class="trash icon"></i>
+          </button>
+        </form>
+      </div>
     </div>
   {{/if}}
-
-  <!--<div class="extra content">-->
-  <!--<span class="right floated">-->
-  <!--joined {{joined}}-->
-  <!--</span>-->
-  <!--<span>-->
-  <!--<i class="user icon"></i>-->
-  <!--75 Friends-->
-  <!--</span>-->
-  <!--</div>-->
 </div>
