user card showing tweet count

--- a/app/views/partials/userCard.hbs
+++ b/app/views/partials/userCard.hbs
@@ -20,6 +20,12 @@
       joined {{joinedString}}
     </div>
   </div>
+  <div class="extra content">
+    <a class="right floated" href="/userTimeline/{{_id}}">
+      {{tweetCount}}
+      <i class="comments icon"></i>
+    </a>
+  </div>
   {{#if canDelete}}
     <div class="extra content">
       <div class="right floated trash icon">
