fixed: only showing user buttons at global/own timeline

--- a/app/views/userTimeline.hbs
+++ b/app/views/userTimeline.hbs
@@ -13,8 +13,10 @@
 
   <div class="ui four wide column">
     <div class="ui stackable cards">
-      {{> userButtonsCard }}
-      {{> deleteCard }}
+      {{#if showUserButtons}}
+        {{> userButtonsCard }}
+        {{> deleteCard }}
+      {{/if}}
 
       {{#with user}}
         {{> userCard }}
