follower/following in stats

--- a/app/views/partials/userCard.hbs
+++ b/app/views/partials/userCard.hbs
@@ -34,6 +34,14 @@
       {{tweetCount}}
       <i class="comments icon"></i>
     </a>
+    <div class="right floated">
+      {{follows.length}}
+      <i class="spy icon"></i>
+    </div>
+    <div class="right floated">
+      {{followerCount}}
+      <i class="users icon"></i>
+    </div>
   </div>
   {{#if canDelete}}
     <div class="extra content">
