--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -9,7 +9,7 @@
       <img class="ui mini image" src="/images/profilePictures/usersCircular.jpg">
     </a>
     <a class="item" href="/userTimeline/{{loggedInUser._id}}">
-        <img class="ui mini circular image" src="{{loggedInUser.profilePicture}}">
+        <img class="ui avatar image" src="{{loggedInUser.profilePicture}}">
     </a>
     <div class="right menu">
         <!--<a id="home"   class= "item" href="/home"> Donate</a>-->
