--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -8,7 +8,7 @@
     <div class="ui six wide column">
         <!--<div class="ui stacked fluid form segment">-->
         <div class="ui stacked fluid segment">
-            <form class="ui form" id="signupForm" action="/register" method="POST" enctype='multipart/form-data'>
+            <form class="ui form" id="profileForm" action="/register" method="POST" enctype='multipart/form-data'>
                 <h3 class="ui header">Register</h3>
                 <div class="two fields">
                     <div class="field">
@@ -66,4 +66,4 @@
     </div>
   </div>
 </section>
-<script src="/scripts/signup.js"></script>
+<script src="/scripts/profileForm.js"></script>
