--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -14,7 +14,7 @@
     <div class="right menu">
         <!--<a id="home"   class= "item" href="/home"> Donate</a>-->
         <!--<a id="report" class= "item" href="/report"> Report</a>-->
-        <!--<a id="settings" class= "item" href="/settings"> Settings</a>-->
+      <a id="settings" class= "item" href="/settings"> Settings</a>
       <a class="item" href="/logout">
         <i class="power icon"></i>
         Logout
